fix typo in readme

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Le projet ZONE fait parti de mon projet de fin d'études. Il vise à fournir une nouvelle approche des flux RSS en leurs ajoutant une notion poussée de personnalisation. 
-Je me suis appuyé pour la compréhension utilisateur sur le besoin du projet ANR Yourcast pour établir un cahier des charges présentant la solution à fournir. Mon application a ainsi pour but dans un premier temps d’agréger des flux rss en provenance du WEB de les enrichir sémantiquement à l'aide d'annotation sémantiques cette première partie de l'application répond au doux nom de ZONE (Ze Ontology News Extractor).  Dans un second temps le but est de fournir aux utilisateurs un système de critères leurs permettant de mettre en place un flux d'information personnalisé rependant à leurs besoin, cette partie la de l'application est nommée ZONEUR (ZONE User Runner). Enfin j'ai eu à cœur de mettre en valeur l'aspect  académique de mon approche en mettant en perspective mes travaux menant à la génération de workflows et la production de lignes de produits logicielles
+Je me suis appuyé pour la compréhension utilisateur sur le besoin du projet ANR Yourcast pour établir un cahier des charges présentant la solution à fournir. Mon application a ainsi pour but dans un premier temps d’agréger des flux rss en provenance du WEB de les enrichir sémantiquement à l'aide d'annotation sémantiques cette première partie de l'application répond au doux nom de ZONE (Ze Ontology News Extractor).  Dans un second temps le but est de fournir aux utilisateurs un système de critères leurs permettant de mettre en place un flux d'information personnalisé rependant à leurs besoin, cette partie la de l'application est nommée ZONEUR (ZONE User Runner). Enfin j'ai eu à cœur de mettre en valeur l'aspect  académique de mon approche en mettant en perspective mes travaux menant à la génération de workflows et la production de lignes de produits logiciels
 
 
 
