revision article for submission

--- a/Rapport/papier1/christophe.bib
+++ b/Rapport/papier1/christophe.bib
@@ -72,6 +72,13 @@ url = {http://ieeexplore.ieee.org/xpl/freeabs\_all.jsp?arnumber=5474737},
 year = {2010}
 }
 
+@phdthesis{Taddesse2010,
+author = {Tadesse, Fekade Getahun},
+school = {Universit\'{e} de Bourgogne},
+title = {{Framework de gestion sémantique de flux d‘actualités}},
+year = {2011}
+}
+
 @phdthesis{Acher2011,
 author = {Acher, Mathieu},
 booktitle = {Sophia},
@@ -86,4 +93,17 @@ journal = {Distribution},
 number = {November},
 title = {{Feature-Oriented Domain Analysis (FODA) Feasibility Study}},
 year = {1990}
+}
+
+@inproceedings{Charton2011,
+  author    = {Eric Charton and
+               Michel Gagnon and
+               Beno\^{\i}t Ozell},
+  title     = {Automatic Semantic Web Annotation of Named Entities},
+  booktitle = {Canadian Conference on AI},
+  year      = {2011},
+  pages     = {74-85},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-21043-3_10},
+  crossref  = {DBLP:conf/ai/2011},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
