--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -70,7 +70,7 @@
 %%
 % Regular title as in the article class.
 %
-\title{Vers la composition de workflows pour le filtrage sémantique de nouvelles}
+\title{Vers la contruction de workflows pour le filtrage sémantique de nouvelles}
 
 % \titlerunning{} has to be set to either the main title or its shorter
 % version for the running heads. Use {\sf} for highlighting your system
@@ -157,18 +157,13 @@ In this paper we show how these workflows are built and present our approach for
 
 \section{Introduction}
 \label{sect:introduction}
-%Mi{N'aime pas le titre}
 
 Le web se révèle aujourd'hui un merveilleux support de diffusion d'informations. Tandis que les sources se multiplient (flux rss, services web, ..), la quantité des informations croît et il devient essentiel de les filtrer en fonction des centres d'intérêts des utilisateurs \cite{Bouzeghoub2005}. Des outils qui exploitent des ontologies ou des thésaurus ont été mis au point qui permettent d'annoter les informations, d'en déduire des critères et d'ensuite obtenir uniquement les informations pertinentes en formulant des requêtes sémantiques sur les annotations. 
-%\mi{enrichir ce qui précède avec des références en essayant si possible de faire ressentir les éléments de l'architecture.}
 Il est aujourd'hui possible de construire des workflows mettant en jeu ces différents outils pour d'une part annoter les flux d'informations et pour d'autre part sélectionner les informations pertinentes en fonction de la cible de diffusion. 
 
 Cependant la construction de ces workflows reste technique malgré les nouveaux supports logiciels tels que les mashups \cite{Floyd2007} \cite{Milanovic2004}. En effet, elle se base sur de nombreux critères qui doivent être pris en compte pour assembler les services et le fait que ces services soient hétéroclites ne permet pas une génération aisée des applications. 
-%\ch{C'est quoi les prbmes, on nce comprend pas}
 De plus de nouvelles ontologies, sources, systèmes d'annotations apparaissent régulièrement tandis que le web se démocratise \cite{Anderruthy2007} \cite{Bross2010}, ce qui occasionne des mises à jour régulières de ces workflows.
 
-%\mi{et surtout bien le dire}
-%Nos objectifs dans le travail présenté ici sont (i) de permettre à un utilisateur non informaticien d'exprimer les thèmes qui l'intéressent et ses critères de sélection et d'automatiquement produire les workflows correspondants, (ii) de prendre en compte l'évolution des outils disponibles. 
 Dans ce contexte, nous décrivons dans cet article la construction de ces workflows, puis discutons leur production automatique  à partir d'un ensemble de caractéristiques sélectionnées l'utilisateur au travers d'une approche basée sur les lignes de produits logiciels. 
 
 Ce travail s'inscrit dans le cadre du projet ANR Emergence \Y qui vise à automatiser la diffusion des informations sur de grands écrans. Nous présentons ce contexte en section \ref{sect:introduction}.
@@ -181,44 +176,23 @@ Nous montrons dans la section \ref{sect:miseEnOuvre} les choix d'architectures  
 \label{sect:exemple}
 Dans le cadre du projet \Y, nous visons à diffuser sur de grands écrans des informations en provenance de différentes sources en particulier celles issues du web. Or de tels systèmes exigent une adhérence forte aux attentes des utilisateurs et l'adéquation des informations avec les centres d'intérêts des personnes est essentielle à l'acceptation de tels systèmes. 
 
-%\paragraph*{Des sources hétérogènes} <= Supprimé par Catherine
-%\ch{Je prefere qu'on garde les sous titre ici cependant Catherine souhaite les enlever : à Mireille de trancher (ca évite selon moi l'effet bloc de texte chiant à lire)}
-
 Or de \textit{nombreuses sources d'information} sont aujourd'hui disponibles sous la forme de flux RSS. Ceux-ci sont généralement classés selon leurs thématiques générales (technologies, international, médical, ...). Une première étude nous a conduit à nous intéresser à une vingtaine de flux RSS sur divers sujets. 
 
-
-% peut être simplement lié au travail ou à l'emplacement géographique de l'écran d'information.
-%Dans notre cas, nous avons choisi d'agréger le plus de sources d'informations possible pour couvrir tous les champs d'application des écrans d'accueil. 
-%Nous faisons donc appel dans notre application à une vingtaine de flux RSS sur de vastes sujets. Ceux-ci sont essentiellement des flux ayant déjà subi une étape de filtrage qui a permis de les classer selon leurs thématiques générales (technologies, international, médical, ...).
-
-%\paragraph*{Sélection des informations}
 La \textit{sélection des informations} dans ces sources multiples repose alors sur la mise en place de critères et leur composition. 
-%Beaucoup de sources d'informations sont agrégeables.
 Ainsi  quelques critères de sélection sont  pré-établis par les fournisseurs de contenus.  Par exemple sur le site de news de Google\footnote{\url{http://news.google.fr}} l'internaute peut accéder à des nouvelles liées à l'économie ou bien des news locales. Cependant il ne peut pas récupérer les nouvelles économiques liées par exemple à la ville de Marseille ou plus largement à la région PACA. Dans notre exploitation des flux RSS nous souhaitons fournir un filtrage multi-critères permettant un tri fin des nouvelles pour par exemple récupérer les nouvelles économiques concernant la région PACA. 
-%\paragraph*{Des critères utilisateurs}
+
 Pour capturer ces critères il existe actuellement différents systèmes tels que le service \textsl{Google Reader}\footnote{\url{http://www.google.fr/reader/}} ou bien celui \textsl{rssLounge}\footnote{\url{http://rsslounge.aditu.de}}. Cependant ceux-ci ne proposent pas de regroupement des flux ni de filtrage multi-critères de ceux-ci. 
-%Dans notre cas d'étude nous nous sommes intéressés annotations politiques et géographiques.
 
-Les exigences du  projet \Y sont celles d'un système intuitif qui permet de capturer simplement les besoins utilisateur à la fois en terme de choix des sources d'informations et de critères de sélection. %Le choix et l'agrégation des sources d'informations et la mise en place des mécanismes de sélection seront alors automatisés.
+Les exigences du  projet \Y sont celles d'un système intuitif qui permet de capturer simplement les besoins utilisateur à la fois en terme de choix des sources d'informations et de critères de sélection.
 
-Pour cela, nous avons choisi d'enrichir des flux d'information en nous basant sur la récupération d'entités nommées présentes dans  un grand nombre de bases de données RDF. Nous utilisons pour cela des systèmes d'extraction d'information et d'annotation sémantique qui permettent d'ajouter des liaisons vers les entités nommées spécifiques.
-
-%\ch{Je lache ce qui suit car je ne comprend pas bien...et on est dans la solution}.
-%
-%Nous avons pour cela développé un système d'aide au choix qui après captation en langage naturel des besoins les retranscrit sous forme d'entités nommées qui sont typées par notre système en fonction des éléments que nous avons déjà pu instancier dans la base de connaissances.
-
-%%\paragraph*{Des processus d'annotation diversifiés}
-%Le système est basé sur une annotation des informations la plus vaste possible. En effet le système doit pouvoir annoter des informations provenant de domaines totalement différents.
-%Nous avons choisis d'utiliser des annotions basées sur la récupération d'entités nommées présentes sur un grand nombre de bases de données RDF.
-%Nous utilisons alors des systèmes d'extraction d'information et d'annotation sémantique qui permettent d'ajouter des liaisons vers les entités nommées spécifiques. 
+Pour cela, nous avons choisi d'enrichir des flux d'information en nous basant sur l'extraction d'entités nommées \cite{Charton2011} présentes dans un grand nombre de bases de données RDF. Nous utilisons pour cela des systèmes d'extraction d'information et d'annotation sémantique qui permettent d'ajouter des liaisons vers les entités nommées spécifiques.
 
 
 %------------------------------------------------------------------------------
 
 \section{Annotation et filtrage sémantiques de flux RSS}
 \label{sect:miseEnOuvre}
-Pour répondre aux besoins exprimés dans le cadre du projet \Y nous avons mis au point deux types de workflows, dont la figure \ref{fig:WF} présente  l'architecture générale : un workflow d'annotation sémantique des nouvelles et un workflow de filtrage sémantique des nouvelles (encadré par des tirets). La division en deux workflows est essentielle car elle permet de faire travailler nos workflows de manière asynchrone.
-% \ch{je présente peut etre la notion de workflow asynchrone de manière maladroite?}
+Afin de permettre une sélection plus adéquate des informations en fonction de leur pertinence sémantique nous avons mis au point deux types de workflows, dont la figure \ref{fig:WF} présente  l'architecture générale : un workflow d'annotation sémantique des nouvelles et un workflow de filtrage sémantique des nouvelles (encadré par des tirets). La division en deux workflows est essentielle car elle permet de faire travailler nos workflows de manière asynchrone.
 
 \begin{figure}[htb!]
 	\begin{centering}
@@ -231,7 +205,7 @@ Pour répondre aux besoins exprimés dans le cadre du projet \Y nous avons mis a
 \subsection{Workflow d'annotation sémantique des nouvelles}
 
 \subsubsection{Lecture de flux RSS}
-Le workflow se base sur la récupération de flux RSS qui sont choisis par l'utilisateur et dont nous connaissons le thème et la langue. Chaque flux RSS fournit un lot de nouvelles. Le flux peut être mis à jour et doit être interrogé périodiquement pour récupérer les dernières nouvelles publiées.
+Le workflow se base sur la récupération de flux RSS qui fournissent un lot de nouvelles. Le flux peut être mis à jour et doit être interrogé périodiquement pour récupérer les dernières nouvelles publiées.
 
 \subsubsection{Annotation sémantique de nouvelles}
 Des services enrichissent les nouvelles par des annotations et ces annotations elles-même peuvent être enrichies par l'utilisation de services de généralisation. 
@@ -239,7 +213,6 @@ Des services enrichissent les nouvelles par des annotations et ces annotations e
 Ainsi, nous utilisons des \textit{services d'annotation} pour qualifier chaque nouvelle par les entités nommées intéressantes la concernant. Les services d'annotation que nous avons utilisés sont : 
 \begin{itemize}
 	\item \textbf{OpenCalais}\footnote{http://www.opencalais.com} permet d'identifier dans le texte les entités correspondant à des lieux français ainsi que des noms de personnalités en langue anglaise. 
-%MI- Grâce à l'API Java fournie par le projet OpenCalais, nous avons  implémenté le code permettant de récupérer les annotations textuelles concernant le texte à annoter;
   \item \textbf{WikiMeta}\footnote{http://www.wikimeta.com} fonctionne sur le même principe qu'OpenCalais. Cependant le projet ne proposait pas au moment de nos recherche d'API permettant d'effectuer des requêtes et nous avons alors dû implémenter l'API Java se connectant à leurs services web. Elle permet de récupérer directement des entités nommées pointant vers la base de connaissances DBpedia; il peut donc être utilisé seul en tant que service d'annotation sans utilisation d'un service de généralisation.
 \end{itemize}
 
@@ -247,54 +220,24 @@ Nous faisons appel à des \textit{services de généralisation} qui travaillent 
 \begin{itemize}
 	\item \textbf{DBpedia}\footnote{http://dbpedia.org} travaille sur les données provenant du service d'annotation WikiMeta et permet de les enrichir sémantiquement à l'aide de liens vers d'autres ressources liées à l'élément.
   \item \textbf{INSEE geo}\footnote{\url{http://rdf.insee.fr/geo/}} La base de données RDF de l'INSEE permet de récupérer les ensembles géographiques liés à une entité nommée géographique. Ce service d'annotation géographique s'utilise donc uniquement en aval d'un service d'annotation classique qui récupère des informations géographiques. Il renvoie des URI vers les entités géographiques liées à la nouvelle étudiée. Nous utilisons pour cela une requête SPARQL.
-%   telle que celle ci-dessous qui permet de retrouver le nom et le type des subdivisions de la ville de Nice :
 \end{itemize}
-
-%\begin{verbatim}
-%    PREFIX geo: <http://rdf.insee.fr/geo/>
-%    SELECT DISTINCT ?nom ?type WHERE {
-%	     ?entite geo:nom ?nom
-%	     ?entite rdf:type ?type
-%	     ?ville geo:nom ?nomVille
-%         ?entite geo:subdivision* ?ville
-%         FILTER(regex(str(?nomVille), 'Nice', 'i'))
-%    }
-%\end{verbatim}
-
-%\ch{nous n'avons pas présenté la partie mémorisation, est-ce grave?}
-%\subsubsection{Mémorisation}
-%\mi{je ne sens pas cette partie.. à voir}
-%Nous stockons le contenu des flux RSS et les annotations dans une base de données RDF grâce à l'utilisation de l'application 4Store. 4store est un serveur de triplets RDF fournissant un accès aux données en lecture et écriture. Il nous permet de créer un EndPoint en ligne rapide et puissant. De plus, cela permet une réutilisation de notre travail d'annotations dans d'autres projets aillant besoin d'accéder à des flux annotés. Enfin cette technologie va permettre une excellente connection entre le workflow d'enrichissement et celui de filtrage car de nombreuses APIs existent pour attaquer la base de données dans différents langages.
 
 \subsection{Workflow de filtrage des nouvelles}
 Le workflow de filtrage permet de créer des critères utilisateurs afin de récupérer les données intéressantes sur la base des annotations. Notre workflow va dans un premier temps transformer les besoins utilisateurs en critères sous forme d'une liste de couples (TypeElement,entiteDescriptive). Ces couples sont ensuite envoyés à l'élément de connexion à la base de données qui effectue une requête SPARQL multi-critères sur la base de donnée RDF pour récupérer les nouvelles à fournir à l'utilisateur. Enfin le système génère un flux RSS personnalisé pour répondre aux besoins utilisateur et le fournit au client. Ce flux RSS va pouvoir être mémorisé par le client pour récupérer en temps réel les nouvelles informations.
-%on choisi de ne pas détailler ce workflow
-
-%Cath: il faudrait détailler davantage ce workflow, quitte à réduire la partie suivante
-%Chris: vous etes sur? on pense qu'elle n'apporte pas enormement à notre reflection (on verra demain)
-%------------------------------------------------------------------------------
 
 \section{Vers la construction automatique de workflows }
 \label{sect:perspectives}
 Notre objectif à terme est de construire une ligne de produits qui capturerait les différentes sources et services disponibles, les qualifierait et permettrait à un utilisateur final de construire ses propres workflows d'annotation en le guidant dans sa sélection de différents services.
 
-%\subsection{Objectifs} <= supprimé par Catherine
-%chris: ok pour la suppression du titre
 Du point de vue de l'utilisateur final, la construction automatique de workflows lui permettra, à partir d'un flux sélectionné, d'affiner la sélection des services d'annotations et généralisations qu'il souhaite utiliser afin d'obtenir une information enrichie par des annotations en fonction de ses besoins. 
 
 A l'heure actuelle le workflow d'annotation interroge tous les services d'annotations disponibles, sans distinction de catégories, ce qui génère de nombreux appels de services dont la plupart sont inutiles. L'utilisation d'une construction automatique à partir des choix de l'utilisateur permettrait de restreindre les appels aux seuls services pertinents et donc d'accélérer les temps de traitements en réduisant la charge des services. 
-
-%Relativement à la figure \ref{fig:WF}, nous envisageons donc d'appréhender les éléments représentés comme des pièces de puzzle, comme des composants issus de lignes de produits.
 
 
 \subsection{Lignes de produits de services}
 Les choix que va faire l'utilisateur vont avoir un impact sur les trois concepts inhérents au workflow d'annotations représentés comme des pièces de puzzle dans la figure \ref{fig:WF} : les \textit{Flux d'information}, les \textit{Services d'Annotation} et les \textit{Services de Généralisation}. Chacun de ces concepts peut être vu comme une ligne de produits indépendante, à partir de laquelle l'utilisateur choisira le service qui lui convient. Nous représentons ces lignes de produits par des modèles de variabilité (\textsl{feature models}) notés FM.
 
 La figure \ref{fig:mmFM} montre le FM \textit{Service d'Annotation} qui permet de caractériser les services d'annotation existants (feature \textit{Produit}), les thèmes (feature \textit{Thème}) et les langues (Feature \textit{Langue}) supportés. La sélection d'une langue ou d'un thème influe directement sur le choix du service d'annotation par le jeu des contraintes internes au FM. On voit par exemple dans la figure \ref{fig:mmFM} que la sélection de la feature \textit{Santé} implique forcément la sélection du produit \textit{MetaMap}.
-
-%Cath : changer Product en Produit dans la figure
-
-%Cath La qualité de la figure ne convient pas: elle est très floue à l'impression
 
 \begin{figure}[htb!]
 	\begin{centering}
@@ -303,17 +246,20 @@ La figure \ref{fig:mmFM} montre le FM \textit{Service d'Annotation} qui permet d
 	\label{fig:mmFM}
 	\end{centering}
 \end{figure}
-%\si{à voir si on garde en dessous...}
-%Chacun des FM des différents concepts est une construction réalisée à partir d'une approche bottom-up. Nous partons des produits existants, en les exprimant sous forme de FM individuels, puis nous effectuons la fusion de ces FM afin d'obtenir une SPL modélisant les différents produits disponibles ainsi que leur variabilité \cite{Acher2011}.
 
-\subsection{Modèle de mise en relation des LPL}
+L'utilisation du FM via un DSL ou des travaux des langages naturels n'ont pas encore été abordés dans nos travaux.
+La construction du FM telle que présentée a été guidé par notre expérimentation. L'ajout de nouvelles sources devrait nous conduire à l'enrichir et éventuellement revoir sa structure.
+
+\subsection{Modèle de mise en relation des Lignes de Produits Logiciels}
 Notre but est de fournir un outil permettant à un utilisateur final de sélectionner des services cohérents en fonction de ses choix. Cela implique que certains choix de l'utilisateur dans un des FM ait un impact sur les autres FM.
 
 Nous exprimons donc des relations entre les différents FM représentants les concepts du domaine. Une relation indique à la fois qu'un produit (i.e. un service) sera lié à un autre, mais aussi que sélectionner un produit influera sur la sélection d'un autre. En effet, les systèmes d'annotation sont spécialisés pour certains types d'informations, comme le service MetaMap\footnote{\url{http://metamap.nlm.nih.gov/}} spécialisé dans l'annotation de données médicales, et ne traitent que certaines langues.
 
 Par exemple, un \textit{Flux} traitant de politique pourra être annoté par un ou plusieurs \textit{Services d'annotation} pouvant enrichir ce type d'information : les services, une fois sélectionnés, seront donc liés à ce flux, par exemple pour l'enrichir en données géographiques ou de santé. Cependant ce \textit{Flux} ne pourra pas être lié à un \textit{Service d'annotation} prenant en charge des langues différentes : la sélection du flux influe directement sur la sélection des \textit{Services d'annotation} à lier, tout simplement en empêchant l'utilisateur de sélectionner un service qui n'est pas compatible selon le critères de \textit{langue}.
 
-Pour cela nous définissons et appliquons des opérations sur les FM \cite{Acher2011} afin de restreindre les choix de l'utilisateur, et ce en cascade. Pour reprendre notre exemple, la sélection d'un flux influe sur la sélection des annotations, en restreignant les services disponibles, ce qui aura également une influence sur les services de généralisation disponibles. 
+Pour cela nous définissons et appliquons des opérations sur les FM \cite{Acher2011} afin de restreindre les choix de l'utilisateur, et ce en cascade. Pour reprendre notre exemple, la sélection d'un flux influe sur la sélection des annotations, en restreignant les services disponibles, ce qui aura également une influence sur les services de généralisation disponibles.
+
+Sur la base du modèle ainsi obtenu qui fait référence aux différentes configurations, nous envisageons de générer automatiquement les workflows en utilisant à la fois les assets associés aux FM et les transformations sur les modèles.
 
 %---------------------------------------------------------------
 \section{Conclusion}
@@ -322,7 +268,9 @@ A l'heure où de plus en plus de services diffusent des flux d'informations sur 
 
 Nous avons présentés dans cet article le système d'annotation ZeOntologyNewsExtractor\footnote{\url{https://github.com/descl/ZONE}} dont une preuve de concept est accessible sur \url{http://zone.zouig.org}. Nous avons explicité l'utilisation de l'ingénierie des connaissances pour enrichir sémantiquement des nouvelles. Puis nous avons présenté la nécessité de faire appel à l'ingénierie du logiciel et particulièrement la mise en place de workflows pour organiser les flux composant notre architecture. Enfin, nous avons présenté une amélioration possible de notre approche utilisant des lignes de produits logiciels afin de construire automatiquement nos workflows d'annotation.
 
-L'un des objectifs de ce travail est d'être, à terme, intégré au projet \Y. Ce projet a, en effet, pour objectif d'aider à la construction de systèmes de diffusions d'informations et il nous paraît intéressant d'être en mesure de proposer aux usagers un outil de filtrage sémantique d'information.
+L'intégration de ce travail au projet \Y constitue une validation  grande échelle du prototype. Ce projet a, en effet, pour objectif d'aider à la construction de systèmes de diffusions d'informations et il nous paraît intéressant d'être en mesure de proposer aux usagers un outil de filtrage sémantique d'information.
+
+D'autre part des services tel que google ranking pourraient de trier les informations par importance et l'utilisation de processus de regroupement permettrait de lier des news similaires entre elles \cite{Taddesse2010}.
 
 %------------------------------------------------------------------------------
 % Refs:
@@ -330,11 +278,7 @@ L'un des objectifs de ce travail est d'être, à terme, intégré au projet \Y. 
 
 \label{sect:bib}
 \bibliographystyle{plain}
-%\bibliographystyle{alpha}
-%\bibliographystyle{unsrt}
-%\bibliographystyle{abbrv}
 \bibliography{christophe}
-%\ch{il manque la biblio de simon sur les LDP}
 
 %------------------------------------------------------------------------------
 \appendix
@@ -347,3 +291,4 @@ L'un des objectifs de ce travail est d'être, à terme, intégré au projet \Y. 
 \end{document}
 
 % EOF
+
