fix bug in title article

--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -70,7 +70,7 @@
 %%
 % Regular title as in the article class.
 %
-\title{Vers la contruction de workflows pour le filtrage sémantique de nouvelles}
+\title{Vers la construction de workflows pour le filtrage sémantique de nouvelles}
 
 % \titlerunning{} has to be set to either the main title or its shorter
 % version for the running heads. Use {\sf} for highlighting your system
