--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -9,7 +9,7 @@
 % below.
 %
 %\documentclass{easychair}
-\documentclass[]{easychair}
+\documentclass[]{ciel}
 %\documentclass[verbose]{easychair}
 %\documentclass[notimes]{easychair}
 %\documentclass[withtimes]{easychair}
@@ -61,6 +61,9 @@
 \newcommand{\policy}[0]{\textsc{policy}\xspace}
 
 %\makeindex
+
+\usepackage{setspace}
+\setstretch{0.94} 
 
 %% Document
 %%
