--- a/Rapport/papier1/christophe.bib
+++ b/Rapport/papier1/christophe.bib
@@ -91,7 +91,7 @@ year = {2011}
 author = {Report, Technical and Kang, Kyo C and Cohen, Sholom G and Hess, James A and Novak, William E and Peterson, A Spencer},
 journal = {Distribution},
 number = {November},
-title = {{Feature-Oriented Domain Analysis (FODA) Feasibility Study}},
+title = {{Feature-Oriented Domain Analysis Feasibility Study}},
 year = {1990}
 }
 
