Last modifications in CIEL paper

--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -63,7 +63,7 @@
 %\makeindex
 
 \usepackage{setspace}
-\setstretch{0.94} 
+\setstretch{0.95} 
 
 %% Document
 %%
@@ -79,7 +79,7 @@
 % version for the running heads. Use {\sf} for highlighting your system
 % name, application, or a tool.
 %
-\titlerunning{Workflows de filtrage sémantique de nouvelles}
+\titlerunning{Vers la contruction de workflows...}
 
 % For only the editors. Authors, please keep this commented out
 % \volumeinfo
@@ -151,7 +151,7 @@ Dans cet article nous montrons comment de tels workflows ont été construits et
 
 \begin{abstract}
 Internet is becoming today a wonderful medium to broadcast informations. While sources are multiplying (RSS, Web Services, ...), the amount of informations is growing and it becomes necessary to filter them according to user interests. Many tools are currently developed that exploits ontologies or thesauri to annotate informations. They enable to query these annotations according to criteria to retrieve only the relevant informations. The composition of these tools constitute workflows that should be enriched by the emergence of new ontologies modeling different domains and text analysis tools. However the composition of these tools-chains is not accessible for everyone.\\
-In this paper we show how these workflows are built and present our approach for automatically building workflows based on user needs. This work is supported by the ANR Emergence \Y project dedicated to automate the broadcasting of informations on large screens, and for which the relevance of informations published is particularly important.
+In this paper we show how these workflows are built and present our approach for automatically building workflows based on user needs. This work is supported by the ANR Emergence \Y project dedicated to automate the broadcasting of informations on large screens, and for which the relevance of informations published is important.
 
 \paragraph*{Keywords: }Semantic Web, Software Product Line, Workflow, Feature Model
 \end{abstract}
@@ -208,7 +208,7 @@ Afin de permettre une sélection plus adéquate des informations en fonction de 
 \subsection{Workflow d'annotation sémantique des nouvelles}
 
 \subsubsection{Lecture de flux RSS}
-Le workflow se base sur la récupération de flux RSS qui fournissent un lot de nouvelles. Le flux peut être mis à jour et doit être interrogé périodiquement pour récupérer les dernières nouvelles publiées.
+Le workflow se base sur la récupération périodique de flux RSS. Ces flux fournissent un lot des dernières nouvelles publiées par l'éditeur et sont mis à jour régulièrement.
 
 \subsubsection{Annotation sémantique de nouvelles}
 Des services enrichissent les nouvelles par des annotations et ces annotations elles-même peuvent être enrichies par l'utilisation de services de généralisation. 
