--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -79,7 +79,7 @@
 % version for the running heads. Use {\sf} for highlighting your system
 % name, application, or a tool.
 %
-\titlerunning{Vers la contruction de workflows...}
+\titlerunning{Vers la construction de workflows...}
 
 % For only the editors. Authors, please keep this commented out
 % \volumeinfo
