add the apache licence in all files using maven (mvn license:update-file-header)

--- a/ZONE-extractor/README
+++ b/ZONE-extractor/README
@@ -1,3 +1,6 @@
 In order to run the project:
 mvn -DskipTests install
 mvn exec:java -pl ZONE-extractor-start
+
+In order to add the licence headers:
+mvn license:update-file-header
